# connection

./: .pre-commit-config.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: ci.yml  test-suite.yml
examples/: echo_client.py  echo_server.py
src/connection/: abstract.py  connection.py
src/smart_connection/: __init__.py  abstract.py  connection.py
tests/: __init__.py  test_buffer.py  test_connection.py
