[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "connection"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "fdv1", email = "francois@pytek.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/fdv1/connection#readme"
Issues = "https://github.com/fdv1/connection/issues"
Source = "https://github.com/fdv1/connection"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/connection tests}"

[tool.coverage.run]
source_pkgs = ["connection", "tests"]
branch = true
parallel = true

[tool.coverage.paths]
connection = ["src/connection", "*/connection/src/connection"]
tests = ["tests", "*/connection/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = ["F401"]


[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120